--- a/src/Interface/FindAddVeiculo.fxml
+++ b/src/Interface/FindAddVeiculo.fxml
@@ -13,9 +13,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="338.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Interface.FindAddVeiculoController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="328.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Interface.FindAddVeiculoController">
    <center>
-      <VBox alignment="CENTER" spacing="10.0">
+      <VBox fx:id="pndados" alignment="CENTER" spacing="10.0">
          <children>
             <HBox alignment="TOP_CENTER">
                <children>
@@ -33,9 +33,10 @@
             </HBox>
             <VBox>
                <children>
-                  <TableView fx:id="tabela" prefHeight="200.0" prefWidth="200.0">
+                  <TableView fx:id="tabela" onMouseClicked="#clicknatabela" prefHeight="200.0" prefWidth="200.0">
                     <columns>
-                      <TableColumn fx:id="tcNome" prefWidth="317.0" text="Nome" />
+                      <TableColumn fx:id="tcNome" prefWidth="187.0" text="Nome" />
+                        <TableColumn fx:id="tcAcoes" prefWidth="118.0" text="Ação" />
                     </columns>
                   </TableView>
                </children>
@@ -53,12 +54,12 @@
             </HBox>
             <HBox alignment="TOP_CENTER">
                <children>
-                  <JFXButton onMouseClicked="#evtSelecionar" prefWidth="141.0" text="Selecionar">
+                  <JFXButton fx:id="btnSelecionar" onMouseClicked="#evtSelecionar" prefWidth="141.0" text="Selecionar">
                      <padding>
                         <Insets top="28.0" />
                      </padding>
                   </JFXButton>
-                  <JFXButton onMouseClicked="#evtAdicionar" prefWidth="141.0" text="Adicionar">
+                  <JFXButton fx:id="btnAdicionar" onMouseClicked="#evtAdicionar" prefWidth="141.0" text="Adicionar">
                      <padding>
                         <Insets top="28.0" />
                      </padding>
