--- a/src/Interface/MessageChat.fxml
+++ b/src/Interface/MessageChat.fxml
@@ -11,26 +11,43 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="500.0" prefWidth="338.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JPA.Dao.LoginController">
+<BorderPane prefHeight="500.0" prefWidth="338.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Interface.MessageChatController">
    <center>
       <VBox alignment="CENTER" prefWidth="318.0" spacing="10.0">
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
          <children>
-            <JFXTextArea prefHeight="318.0" promptText="Chat...">
+            <HBox spacing="10.0">
+               <children>
+                  <JFXTextField fx:id="txbPedido" labelFloat="true" prefHeight="36.0" prefWidth="252.0" promptText="Pedido:">
+                     <padding>
+                        <Insets top="12.0" />
+                     </padding>
+                  </JFXTextField>
+                  <JFXButton onMouseClicked="#evtPesquisarPedido" text=" ">
+                     <graphic>
+                        <FontAwesomeIconView glyphName="SEARCH" />
+                     </graphic>
+                  </JFXButton>
+               </children>
+               <padding>
+                  <Insets top="12.0" />
+               </padding>
+            </HBox>
+            <JFXTextArea fx:id="taChat" prefHeight="318.0" promptText="Chat...">
                <padding>
                   <Insets top="12.0" />
                </padding>
             </JFXTextArea>
             <HBox spacing="10.0">
                <children>
-                  <JFXTextField labelFloat="true" prefHeight="36.0" prefWidth="252.0" promptText="Mensagem">
+                  <JFXTextField fx:id="txbMensagem" labelFloat="true" prefHeight="36.0" prefWidth="252.0" promptText="Mensagem">
                      <padding>
                         <Insets top="12.0" />
                      </padding>
                   </JFXTextField>
-                  <JFXButton text=" ">
+                  <JFXButton onMouseClicked="#evtSubmit" text=" ">
                      <graphic>
                         <FontAwesomeIconView glyphName="PAPER_PLANE" />
                      </graphic>
