--- a/src/Interface/FindAddVeiculo.fxml
+++ b/src/Interface/FindAddVeiculo.fxml
@@ -5,6 +5,7 @@
 <?import com.jfoenix.controls.JFXTextField?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -13,73 +14,77 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="328.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Interface.FindAddVeiculoController">
+<BorderPane prefHeight="500.0" prefWidth="328.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Interface.FindAddVeiculoController">
    <center>
-      <VBox fx:id="pndados" alignment="CENTER" spacing="10.0">
-         <children>
-            <HBox alignment="TOP_CENTER">
+      <ScrollPane>
+         <content>
+            <VBox fx:id="pndados" alignment="CENTER" prefWidth="322.0" spacing="10.0">
                <children>
-                  <JFXTextField fx:id="txbVeiculo" labelFloat="true" prefHeight="36.0" prefWidth="252.0" promptText="Nome do Veiculo">
+                  <HBox alignment="TOP_CENTER">
+                     <children>
+                        <JFXTextField fx:id="txbVeiculo" labelFloat="true" prefHeight="36.0" prefWidth="252.0" promptText="Nome do Veiculo">
+                           <padding>
+                              <Insets top="12.0" />
+                           </padding>
+                        </JFXTextField>
+                        <JFXButton onMouseClicked="#evtPesquisar" prefHeight="36.0" text=" ">
+                           <graphic>
+                              <FontAwesomeIconView glyphName="SEARCH" />
+                           </graphic>
+                        </JFXButton>
+                     </children>
+                  </HBox>
+                  <VBox>
+                     <children>
+                        <TableView fx:id="tabela" onMouseClicked="#clicknatabela" prefHeight="200.0" prefWidth="80.0">
+                          <columns>
+                            <TableColumn fx:id="tcNome" prefWidth="187.0" text="Nome" />
+                              <TableColumn fx:id="tcAcoes" prefWidth="120.0" text="Ação" />
+                          </columns>
+                        </TableView>
+                     </children>
                      <padding>
                         <Insets top="12.0" />
                      </padding>
-                  </JFXTextField>
-                  <JFXButton onMouseClicked="#evtPesquisar" prefHeight="36.0" text=" ">
-                     <graphic>
-                        <FontAwesomeIconView glyphName="SEARCH" />
-                     </graphic>
-                  </JFXButton>
-               </children>
-            </HBox>
-            <VBox>
-               <children>
-                  <TableView fx:id="tabela" onMouseClicked="#clicknatabela" prefHeight="200.0" prefWidth="200.0">
-                    <columns>
-                      <TableColumn fx:id="tcNome" prefWidth="187.0" text="Nome" />
-                        <TableColumn fx:id="tcAcoes" prefWidth="118.0" text="Ação" />
-                    </columns>
-                  </TableView>
+                  </VBox>
+                  <HBox>
+                     <children>
+                        <JFXTextArea fx:id="taDescricao" labelFloat="true" prefHeight="20.0" promptText="Descrição:" />
+                     </children>
+                     <padding>
+                        <Insets top="18.0" />
+                     </padding>
+                  </HBox>
+                  <HBox alignment="TOP_CENTER">
+                     <children>
+                        <JFXButton fx:id="btnSelecionar" onMouseClicked="#evtSelecionar" prefWidth="141.0" text="Selecionar">
+                           <padding>
+                              <Insets top="28.0" />
+                           </padding>
+                        </JFXButton>
+                        <JFXButton fx:id="btnAdicionar" onMouseClicked="#evtAdicionar" prefWidth="141.0" text="Adicionar">
+                           <padding>
+                              <Insets top="28.0" />
+                           </padding>
+                        </JFXButton>
+                     </children>
+                  </HBox>
+                  <HBox alignment="TOP_CENTER">
+                     <children>
+                        <JFXButton onMouseClicked="#evtCancelar" prefWidth="282.0" text="Cancelar">
+                           <padding>
+                              <Insets top="28.0" />
+                           </padding>
+                        </JFXButton>
+                     </children>
+                  </HBox>
                </children>
                <padding>
-                  <Insets top="12.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </VBox>
-            <HBox>
-               <children>
-                  <JFXTextArea fx:id="taDescricao" labelFloat="true" prefHeight="20.0" promptText="Descrição:" />
-               </children>
-               <padding>
-                  <Insets top="18.0" />
-               </padding>
-            </HBox>
-            <HBox alignment="TOP_CENTER">
-               <children>
-                  <JFXButton fx:id="btnSelecionar" onMouseClicked="#evtSelecionar" prefWidth="141.0" text="Selecionar">
-                     <padding>
-                        <Insets top="28.0" />
-                     </padding>
-                  </JFXButton>
-                  <JFXButton fx:id="btnAdicionar" onMouseClicked="#evtAdicionar" prefWidth="141.0" text="Adicionar">
-                     <padding>
-                        <Insets top="28.0" />
-                     </padding>
-                  </JFXButton>
-               </children>
-            </HBox>
-            <HBox alignment="TOP_CENTER">
-               <children>
-                  <JFXButton onMouseClicked="#evtCancelar" prefWidth="282.0" text="Cancelar">
-                     <padding>
-                        <Insets top="28.0" />
-                     </padding>
-                  </JFXButton>
-               </children>
-            </HBox>
-         </children>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-      </VBox>
+         </content>
+      </ScrollPane>
    </center>
    <top>
       <HBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
